# future_land_use

./: README.md  pyproject.toml
future_land_use/: run.py
future_land_use/r_scripts/: imputation_FLU2026.R
future_land_use/steps/: apply_hb_1110_to_flu.py  apply_hb_1110_to_parcels.py  apply_overlays.py  combine_overlays.py  create_old_flu_crosswalk.py  flag_hb_1110_parcels.py  flag_overlay_parcels.py  flu_remove_overlaps.py  generate_hb_1110_stops.py  generate_hb_1110_walksheds.py  get_elmer_data.py  impute_flu.py  load_data.py  parcel_flu_spatial_join.py  run_walksheds.py  unroll_constraints.py
future_land_use/util/: __init__.py  pipeline.py
projects/summer_2026/: scratch.ipynb
projects/summer_2026/configs/: settings.yaml
projects/summer_2026/output/: .gitignore
wiki/: Future-Land-Use-Overview.md
