[project]
name = "future-land-use"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.3",
    "openpyxl>=3.1.5",
    "pypyr>=5.9.1",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
